--- a/NetflixClone/src/css/styles.css
+++ b/NetflixClone/src/css/styles.css
@@ -43,6 +43,9 @@ body {
   gap: 30px;
   list-style: none;
 }
+.app .navbar .nav_links_container ul li {
+  position: relative;
+}
 .app .navbar .nav_links_container ul li i, .app .navbar .nav_links_container ul li p {
   color: #535bf2;
   text-decoration: none;
@@ -52,6 +55,16 @@ body {
 }
 .app .navbar .nav_links_container ul li i {
   font-size: 20px;
+}
+.app .navbar .nav_links_container ul li .active::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -2px;
+  width: 110%;
+  transform: translateX(-50%);
+  height: 2px;
+  background-color: white;
 }
 .app .home {
   margin-left: 65px;
@@ -201,28 +214,29 @@ body {
   display: none;
 }
 .app .home .carousel_container, .app .watch .carousel_container {
-  margin-left: 20px;
+  margin-inline: 30px;
   position: relative;
   margin-top: -50px;
 }
 .app .home .carousel_container h3, .app .watch .carousel_container h3 {
   text-transform: uppercase;
-  font-weight: 500;
+  font-size: 24px;
+  font-weight: 600;
   margin-left: 30px;
   margin-bottom: 10px;
 }
 .app .home .carousel_container .carousel, .app .watch .carousel_container .carousel {
-  margin-bottom: 60px;
+  margin-bottom: 50px;
 }
 .app .home .carousel_container .carousel_wrapper, .app .watch .carousel_container .carousel_wrapper {
-  border-radius: 20px;
+  border-radius: 5px;
   overflow: hidden;
   position: relative;
 }
 .app .home .carousel_container .carousel_wrapper .movies, .app .watch .carousel_container .carousel_wrapper .movies {
   display: flex;
-  gap: 10px;
-  transition: 1s ease;
+  gap: 30px;
+  transition: 1.3s ease;
 }
 .app .home .carousel_container .carousel_wrapper #move_left, .app .watch .carousel_container .carousel_wrapper #move_left {
   left: 0;
@@ -234,11 +248,10 @@ body {
   position: absolute;
   top: 0;
   z-index: 2;
+  background: rgba(16, 22, 47, 0.7);
   width: 55px;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  height: 320px;
   border: none;
-  opacity: 0;
   transition: 0.2s;
 }
 .app .home .carousel_container .carousel_wrapper #move_left i, .app .home .carousel_container .carousel_wrapper #move_right i, .app .watch .carousel_container .carousel_wrapper #move_left i, .app .watch .carousel_container .carousel_wrapper #move_right i {
@@ -253,40 +266,53 @@ body {
   opacity: 1;
 }
 .app .home .carousel_container .carousel_wrapper .movie, .app .watch .carousel_container .carousel_wrapper .movie {
-  height: 219.39px;
-  border-radius: 20px;
-  overflow: hidden;
+  min-width: 220px;
   position: relative;
 }
-.app .home .carousel_container .carousel_wrapper .movie img, .app .watch .carousel_container .carousel_wrapper .movie img {
-  height: 100%;
-  transition: 0.3s ease;
-}
-.app .home .carousel_container .carousel_wrapper .movie .movie_info, .app .watch .carousel_container .carousel_wrapper .movie .movie_info {
-  position: absolute;
+.app .home .carousel_container .carousel_wrapper .movie .movie_link, .app .watch .carousel_container .carousel_wrapper .movie .movie_link {
   width: 100%;
-  bottom: -40px;
-  left: 0;
-  z-index: 2;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-inline: 20px;
-  height: 40px;
-  background: rgb(9, 1, 37);
-  background: linear-gradient(0deg, rgba(9, 1, 37, 0.9051995798) 90%, rgba(63, 94, 251, 0) 100%);
-  opacity: 0;
-  transition: 0.3s ease;
 }
-.app .home .carousel_container .carousel_wrapper .movie:hover, .app .watch .carousel_container .carousel_wrapper .movie:hover {
+.app .home .carousel_container .carousel_wrapper .movie .movie_link .poster, .app .watch .carousel_container .carousel_wrapper .movie .movie_link .poster {
+  height: 320px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 5px;
+  background-size: cover;
+  background-position: center;
   cursor: pointer;
 }
-.app .home .carousel_container .carousel_wrapper .movie:hover img, .app .watch .carousel_container .carousel_wrapper .movie:hover img {
-  transform: scale(1.1);
+.app .home .carousel_container .carousel_wrapper .movie .movie_info, .app .watch .carousel_container .carousel_wrapper .movie .movie_info {
+  width: 100%;
+  margin-top: 6px;
 }
-.app .home .carousel_container .carousel_wrapper .movie:hover .movie_info, .app .watch .carousel_container .carousel_wrapper .movie:hover .movie_info {
-  bottom: 0;
-  opacity: 1;
+.app .home .carousel_container .carousel_wrapper .movie .movie_info p, .app .watch .carousel_container .carousel_wrapper .movie .movie_info p {
+  font-size: 18px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.app .home .carousel_container .carousel_wrapper .movie .movie_info .movie_props, .app .watch .carousel_container .carousel_wrapper .movie .movie_info .movie_props {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-block: 5px;
+}
+.app .home .carousel_container .carousel_wrapper .movie .movie_info .movie_props p, .app .watch .carousel_container .carousel_wrapper .movie .movie_info .movie_props p {
+  font-size: 15px;
+  font-weight: 400;
+  color: #8f8e8e;
+}
+.app .home .carousel_container .carousel_wrapper .movie .movie_info .movie_props .movie_actions, .app .watch .carousel_container .carousel_wrapper .movie .movie_info .movie_props .movie_actions {
+  display: flex;
+  gap: 15px;
+}
+.app .home .carousel_container .carousel_wrapper .movie .movie_info .movie_props .movie_actions button, .app .watch .carousel_container .carousel_wrapper .movie .movie_info .movie_props .movie_actions button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 15px;
+}
+.app .home .carousel_container .carousel_wrapper .movie .movie_info .movie_props .movie_actions button i, .app .watch .carousel_container .carousel_wrapper .movie .movie_info .movie_props .movie_actions button i {
+  color: #8f8e8e;
 }
 .app .home .carousel_container .carousel_wrapper:hover .carousel_controls, .app .watch .carousel_container .carousel_wrapper:hover .carousel_controls {
   opacity: 1;
@@ -303,14 +329,14 @@ body {
 }
 .app .circular_progress span {
   position: relative;
-  color: #ededed;
-  font-size: 14px;
+  color: #535bf2;
+  font-size: 12px;
 }
 .app .circular_progress:before {
   content: "";
   position: absolute;
-  width: 24px;
-  height: 24px;
+  width: 80%;
+  height: 80%;
   border-radius: 50%;
   background-color: rgba(9, 1, 37, 0.9);
 }
@@ -508,6 +534,56 @@ body {
 }
 .app .watch .carousel_container h3 {
   font-size: 24px;
+}
+.app .movies_page {
+  margin-left: 65px;
+}
+.app .movies_page .filters {
+  padding-block: 30px;
+}
+.app .movies_page .filters .filters_controls {
+  display: none;
+}
+.app .movies_page .filters .filters_navigation::-webkit-scrollbar {
+  display: none;
+}
+.app .movies_page .filters .filters_navigation {
+  width: 96%;
+  margin-left: 20px;
+  border-radius: 25px;
+  overflow: hidden;
+  position: relative;
+}
+.app .movies_page .filters .filters_navigation #move_left, .app .movies_page .filters .filters_navigation #move_right {
+  position: absolute;
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  transform: translateY(-50%);
+  border: none;
+  background: rgba(16, 22, 47, 0.7);
+  z-index: 2;
+}
+.app .movies_page .filters .filters_navigation #move_left i, .app .movies_page .filters .filters_navigation #move_right i {
+  font-size: 26px;
+}
+.app .movies_page .filters .filters_navigation #move_right {
+  right: 0;
+}
+.app .movies_page .filters .filters_navigation .filters_wrapper {
+  display: flex;
+  gap: 40px;
+  transition: 0.6s ease;
+}
+.app .movies_page .filters .filters_navigation .filters_wrapper .option {
+  width: 180px;
+  height: 50px;
+  background-color: #292727;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=styles.css.map */
