--- a/NetflixClone/src/sass/styles.sass
+++ b/NetflixClone/src/sass/styles.sass
@@ -45,6 +45,7 @@ body
                     list-style: none
                     
                     li
+                        position: relative
 
                         i, p
                             color: #535bf2
@@ -54,6 +55,17 @@ body
                         
                         i
                             font-size: 20px
+
+                        .active::after
+                            content: ""
+                            position: absolute
+                            left: 50%
+                            bottom: -2px
+                            width: 110%
+                            transform: translateX(-50%)
+                            height: 2px
+                            background-color: white
+
     
     .home
         margin-left: 65px
@@ -209,44 +221,44 @@ body
             display: none
             
         .carousel_container
-            margin-left: 20px
+            margin-inline: 30px
             position: relative
             margin-top: -50px
 
             h3  
                 text-transform: uppercase
-                font-weight: 500
+                font-size: 24px
+                font-weight: 600
                 margin-left: 30px
                 margin-bottom: 10px
             
             .carousel
-                margin-bottom: 60px
+                margin-bottom: 50px
             
             .carousel_wrapper
-                border-radius: 20px
+                border-radius: 5px
                 overflow: hidden
                 position: relative        
                 
                 .movies
                     display: flex
-                    gap: 10px
-                    transition: 1s ease
+                    gap: 30px
+                    transition: 1.3s ease
 
                 #move_left
                     left: 0
-                
+
                 #move_right
                     right: 0
-                    
+      
                 #move_left, #move_right
                     position: absolute
                     top: 0
                     z-index: 2
+                    background: rgba(16,22,47, 0.7)
                     width: 55px
-                    height: 100%
-                    background-color: rgba(0, 0, 0, 0.7)
+                    height: 320px
                     border: none
-                    opacity: 0
                     transition: 0.2s
     
                     i
@@ -261,41 +273,53 @@ body
                     opacity: 1
                             
                 .movie
-                    height: 219.39px
-                    border-radius: 20px
-                    overflow: hidden
+                    min-width: 220px
                     position: relative
-                   
-                    img
-                        
-                        height: 100%
-                        transition: 0.3s ease
 
-                    .movie_info
-                        position: absolute
+                    .movie_link
                         width: 100%
-                        bottom: -40px
-                        left: 0
-                        z-index: 2
-                        display: flex
-                        justify-content: space-between
-                        align-items: center
-                        padding-inline: 20px
-                        height: 40px
-                        background: rgb(9,1,37)
-                        background: linear-gradient(0deg, rgba(9,1,37,0.9051995798319328) 90%, rgba(63,94,251,0) 100%)
-                        opacity: 0
-                        transition: 0.3s ease                           
-                                
-                .movie:hover
-                    cursor: pointer
 
-                    img
-                        transform: scale(1.1)
+                        .poster
+                            height: 320px
+                            width: 100%
+                            overflow: hidden
+                            border-radius: 5px
+                            background-size: cover
+                            background-position: center
+                            cursor: pointer
 
                     .movie_info
-                        bottom: 0
-                        opacity: 1
+                        width: 100%
+                        margin-top: 6px
+
+                        p
+                            font-size: 18px
+                            font-weight: 600
+                            text-decoration: none                        
+                            
+                        .movie_props
+                            display: flex
+                            align-items: center
+                            justify-content: space-between
+                            padding-block: 5px
+
+                            p
+                                font-size: 15px
+                                font-weight: 400
+                                color: #8f8e8e
+
+                            .movie_actions
+                                display: flex
+                                gap: 15px
+
+                                button
+                                    background-color: transparent 
+                                    border: none
+                                    cursor: pointer
+                                    font-size: 15px
+
+                                    i
+                                        color: #8f8e8e
 
             .carousel_wrapper:hover  
                 .carousel_controls
@@ -313,14 +337,14 @@ body
 
         span
             position: relative
-            color: #ededed
-            font-size: 14px
+            color: #535bf2
+            font-size: 12px
 
     .circular_progress:before
         content: ""
         position: absolute
-        width: 24px
-        height: 24px
+        width: 80%
+        height: 80%
         border-radius: 50%
         background-color: rgba(9,1,37,0.9)
 
@@ -524,4 +548,59 @@ body
 
             h3
                 font-size: 24px
+
+    .movies_page
+        margin-left: 65px
+
+        .filters
+
+            padding-block: 30px
+
+            .filters_controls
+                display: none
             
+
+            .filters_navigation::-webkit-scrollbar
+                display: none
+
+            .filters_navigation
+                width: 96%
+                
+                margin-left: 20px
+                border-radius: 25px
+                overflow: hidden 
+                position: relative
+
+                #move_left, #move_right
+                    position: absolute
+                    top: 50%
+                    width: 50px
+                    height: 50px
+                    transform: translateY(-50%)
+                    border: none
+                    background: rgba(16,22,47, 0.7)
+                    z-index: 2
+
+                    i
+                        font-size: 26px
+                            
+                #move_right
+                    right: 0
+
+                .filters_wrapper
+                    display: flex
+                    gap: 40px
+                    transition: 0.6s ease
+
+
+                    .option
+                        width: 180px
+                        height: 50px
+                        background-color: #292727
+                        display: flex
+                        justify-content: center
+                        align-items: center
+                        border-radius: 25px
+                        cursor: pointer
+
+                       
